# traffic_generation

./: .gitignore  CMakeLists.txt  Distribution.py  Generator.py  GoogleQuery.py  Launcher.py  LogTest.py  Opener.py  README.md  SiteList.py  Statistics.py  Surfing.py  UsualSite.py  Worker.py  connect_to_server.sh  dependency_installation.sh  google_queries.ipynb  main.cpp  manifest.json  open_tinkoff.py  run_virtual_interface.sh  utils.py
config/: configuration.json  different_types.json  google.json  show_track.json  surfing.json  surfing_dual_normal.json  surfing_fix.json  surfing_positive_normal.json  surfing_uniform.json  track.json  track_surfing.json  yandex_catalog.json  yandex_custom.json
distributions/: Custom.py  Distribution.py  DualNormal.py  Exponential.py  Fix.py  NormalPositive.py  Uniform.py
doc/: Компонент журналирования.docx
log-server/: install.sh
log-server/configs/: 30-prcss.conf  elasticsearch.yml  logstash  logstash-syslog.conf  logstash-syslog.conf~
logger/: configuration.json
logger_usage/: Logger.h  config.json  executor.py  gen3.py  generator.py
model generator/: MainLoop.py  Opener.py  SiteList.py  Surfing.py  configuration.json  gtk_usage.py  open.py  utils.py
old files/: main.cpp  open_rzd.py  port_scan.sh
py-generation/: configuration+parsing.py  configuration.json  configuration2.json  gen3.py  generator.py  install packets  open_page.py
refactored/: MainLoop.py  README.md  SiteList.py  configuration.json  install
support_files/: sitelist.xlsx
virtual interface setUp/: .MakeFile.swp  Makefile  virt.c
(+3 files in other folders)
